# durabletask-rs

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/derive/: Cargo.toml
crates/proto/: Cargo.toml  build.rs
crates/protos/: Cargo.toml  build.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: api.rs  environment.rs  executor.rs  filter.rs  internal.rs  lib.rs  logger.rs  registry.rs  task.rs  types.rs  worker.rs
crates/sdk/tests/: integration_test.rs
crates/tests/: Cargo.toml
crates/types/: Cargo.toml
crates/utils/: Cargo.toml
examples/: Cargo.toml
examples/components/: postgres.yml
examples/src/: activity_sequence.rs  external_events.rs  parallel.rs  sub_orchestrator.rs  terminate_test.rs
