[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/derive",
    "crates/protos",
    "crates/sdk",
    "crates/tests",
    "examples"
]

[workspace.package]
version = "0.1.0-alpha"
authors = [
    "Harsha Teja Kanna <harsha@denote.dev>"
]
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/h7kanna/durabletask-rs"
description = "DurableTask Rust SDK"

[workspace.dependencies]
anyhow = { version = "1.0.93" }
async-trait = { version = "0.1.83" }
prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }
serde = { version = "1.0.214" }
serde_json = { version = "1.0.132" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-test = { version = "0.4.4" }
tracing = { version = "0.1.40" }
