[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/derive",
    "crates/proto",
    "crates/sdk",
    "crates/tests",
    "crates/types",
    "crates/utils",
    "examples"
]

[workspace.package]
version = "0.1.0-alpha"
authors = [
    "Harsha Teja Kanna <harsha@denote.dev>"
]
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/h7kanna/durabletask-rs"
description = "DurableTask Rust SDK"

[workspace.dependencies]
anyhow = { version = "1.0.93" }
async-trait = { version = "0.1.83" }
bytes = { version = "1.8.0" }
derive_more = { version = "1.0.0" }
futures-util = { version = "0.3.31" }
opentelemetry = { version = "0.26.0" }
prost = { version = "0.13.3" }
prost-build = { version = "0.13.3" }
prost-types = { version = "0.13.3" }
prost-wkt-types = { version = "0.6.0" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
thiserror = { version = "2.0.3" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-test = { version = "0.4.4" }
tonic = { version = "0.12.3" }
tonic-build = { version = "0.12.3" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry", "json"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
