[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/derive",
    "crates/proto",
    "crates/sdk",
    "crates/tests",
    "crates/types",
    "crates/utils",
    "examples"
]

[workspace.package]
version = "0.1.0-alpha"
authors = [
    "Harsha Teja Kanna <harsha@denote.dev>"
]
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/h7kanna/durabletask-rs"
description = "DurableTask Rust SDK"

[workspace.dependencies]
anyhow = { version = "1.0.96" }
async-trait = { version = "0.1.86" }
bytes = { version = "1.10.0" }
derive_more = { version = "2.0.1" }
futures-util = { version = "0.3.31" }
opentelemetry = { version = "0.30.0" }
prost = { version = "0.13.5" }
prost-build = { version = "0.13.5" }
prost-types = { version = "0.13.5" }
prost-wkt-types = { version = "0.6.0" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
thiserror = { version = "2.0.11" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-test = { version = "0.4.4" }
tonic = { version = "0.13.1" }
tonic-build = { version = "0.13.1" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry", "json"] }
uuid = { version = "1.15.1", features = ["v4", "fast-rng"] }
