[package]
name = "durabletask-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
logger = ["durabletask-sdk/logger"]

[[example]]
doc = false
name = "activity_sequence"
path = "src/activity_sequence.rs"
required-features = ["logger"]

[dependencies]
anyhow = { workspace = true }
durabletask-client = { path = "../crates/client" }
durabletask-sdk = { path = "../crates/sdk" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
