[package]
name = "durabletask-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
tracing-subscriber = ["durabletask-sdk/tracing-subscriber"]

[[example]]
doc = false
name = "activity_sequence"
path = "src/activity_sequence.rs"
required-features = ["tracing-subscriber"]

[[example]]
doc = false
name = "sub_orchestrator"
path = "src/sub_orchestrator.rs"
required-features = ["tracing-subscriber"]

[[example]]
doc = false
name = "external_events"
path = "src/external_events.rs"
required-features = ["tracing-subscriber"]

[[example]]
doc = false
name = "parallel"
path = "src/parallel.rs"
required-features = ["tracing-subscriber"]

[[example]]
doc = false
name = "terminate_test"
path = "src/terminate_test.rs"
required-features = ["tracing-subscriber"]

[dependencies]
anyhow = { workspace = true }
durabletask-client = { path = "../crates/client" }
durabletask-sdk = { path = "../crates/sdk" }
futures-util = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
