[package]
name = "durabletask-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
durabletask-proto = { path = "../proto" }
durabletask-types = { path = "../types" }
futures-util = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
