[package]
name = "durabletask-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
darling =  { version = "0.20.10" }
durabletask-types = { version = "0.1.0", path = "../types" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2.0" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
