[package]
name = "durabletask-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
tonic = { version = "0.12.3" }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { version = "0.12.3" }