[package]
name = "durabletask-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }