[package]
name = "durabletask-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["logger"]
logger = ["tracing-subscriber"]
random = ["rand"]

[dependencies]
anyhow = { workspace = true }
durabletask-proto = { path = "../proto" }
futures-util = { workspace = true }
gethostname = { version = "0.5.0" }
opentelemetry = { workspace = true }
pin-project-lite = { version = "0.2.15" }
prost-wkt-types = { workspace = true }
rand = { version = "0.8.5", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
