[package]
name = "durabletask-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["tracing-subscriber"]
tracing-subscriber = ["dep:tracing-subscriber"]
random = ["rand"]

[dependencies]
anyhow = { workspace = true }
durabletask-proto = { path = "../proto" }
dashmap = { version = "6.1.0" }
derive_more = { version = "1.0.0", features = ["from"] }
futures-util = { workspace = true }
gethostname = { version = "0.5.0" }
opentelemetry = { workspace = true }
parking_lot =  { version = "0.12.3" }
prost-wkt-types = { workspace = true }
rand = { version = "0.8.5", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
