[package]
name = "durabletask-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
durabletask-proto = { path = "../proto" }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.26.3" }
thiserror = { workspace = true }